--- a/style2.css
+++ b/style2.css
@@ -104,7 +104,7 @@ color: #666666;
 
   body{
 
-    background: green;
+    background: blue;
   }
 
   h3{
@@ -119,8 +119,8 @@ color: #666666;
   }
 
   .form-wrapper{
-    width: 100%;
-    height:390px;
+    width: 90%;
+    height:490px;
     margin:150px 0px 0px 0px;
     padding: 15px 25px;
     border-radius: 5px;
@@ -128,9 +128,78 @@ color: #666666;
     background: rgba(0,0,0,0.27);
   }
 
+  .form-item input{
 
+  border: none;
+  background:transparent;
+  color: #fff;
+  margin-top:11px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.2em;
+  height: 90px;
+  padding: 0 16px;
+  width: 100%;
+  padding-left: 55px;
 
+  }
 
+  .form-item input:focus {
+  outline: none;
+  border:1.4px solid #cfecf0;
+  }
+
+   input[type='password']{
+  background: transparent url("image/pass.jpg") no-repeat;
+  background-position: 10px 50%;
+  }
+
+   input[type='email']{
+  background-image: url(image/user.jpg);
+  background-repeat: no-repeat;
+  background-position: 10px 50%;
+  }
+
+  .button-panel {
+  margin-bottom: 20px;
+  padding-top: 10px;
+  width: 100%;
+  }
+
+  .button-panel .button {
+  background: #00b6df;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  height: 45px;
+  font-family: 'helvetica','Open Sans', sans-serif;
+  font-size: 1.2em;
+  text-align: center;
+  text-transform: uppercase;
+  transition: background 0.6s linear;
+  width: 40%;
+  margin-top:10px;
+  }
+
+  .button:hover {
+  background: #6eb7cb;
+  }
+
+  .form-item input, .button-panel .button {
+  border-radius: 2px
+  }
+
+  .reminder {
+  text-align: center;
+  }
+
+  .reminder a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.5s;
+  }
+  .reminder a:hover {
+  color: #666666;
+  }
 
 
 
