--- a/style2.css
+++ b/style2.css
@@ -103,8 +103,7 @@ color: #666666;
 @media only screen and (max-width:1080px) {
 
   body{
-
-    background: green;
+    background-image:linear-gradient(#e66465, #9198e5);
   }
 
   h3{
