--- a/style2.css
+++ b/style2.css
@@ -103,8 +103,9 @@ color: #666666;
 @media only screen and (max-width:1080px) {
 
   body{
-    width: 100%;
-    height:100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     background-image:linear-gradient(#e66465, #9198e5);
   }
 
