--- a/style2.css
+++ b/style2.css
@@ -30,7 +30,7 @@ h3{
 
 border: none;
 background:transparent;
-color: #fff;
+color: #9198e5;
 margin-top:11px;
 font-family: 'Open Sans', sans-serif;
 font-size: 1.2em;
@@ -136,7 +136,7 @@ color: #666666;
 
   border: none;
   background:transparent;
-  color: #000;
+  color:  #9198e5;
   margin-top:11px;
   font-family: 'Open Sans', sans-serif;
   font-size: 1.2em;
