--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-image:linear-gradient(#e66465, #9198e5);
+  background-image:url(image/background1920.jpg);
 }
 
 h3{
@@ -30,7 +30,7 @@ h3{
 
 border: none;
 background:transparent;
-color: #9198e5;
+color: #000;
 margin-top:11px;
 font-family: 'Open Sans', sans-serif;
 font-size: 1.2em;
@@ -136,7 +136,7 @@ color: #666666;
 
   border: none;
   background:transparent;
-  color:  #9198e5;
+  color:  #fff;
   margin-top:11px;
   font-family: 'Open Sans', sans-serif;
   font-size: 1.2em;
