--- a/style.css
+++ b/style.css
@@ -25,6 +25,23 @@
   width: 500px;
 }
 
+textarea{
+  width: 100%;
+}
+
+.rule-list{
+  width: 100%;
+}
+
+.textfield input{
+  height: 20%;
+}
+
+input[type='text']{
+  width: 90%;
+  height: 50px;
+}
+
 .numberbox{
   width: 150px;
   height: 100px;
