--- a/descriptionStyle.css
+++ b/descriptionStyle.css
@@ -54,3 +54,12 @@ body{
   font-family:'sans-serif','helvetica';
   font-size: 20PX;
 }
+
+@media only screen and (max-width:1080px) {
+  body{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image:url(image/gradientbg.jpg);
+  }
+}
