--- a/descriptionStyle.css
+++ b/descriptionStyle.css
@@ -34,8 +34,6 @@ body{
   border-width: 1px;
   box-shadow: 2px 2px 15px 8px rgba(36, 36, 36, 0.15);
   background: rgba(217, 217, 217, 0.61);
-
-
 }
 
 .description{
@@ -62,4 +60,35 @@ body{
     background-attachment: fixed;
     background-image:url(image/gradientbg.jpg);
   }
+
+  .form{
+    width: 900px;
+    height: 100%;
+    border-radius: 5px;
+    margin: 150px 0px 0px 0px;
+    padding: 0px 0px 25px 0px;
+    border-style: solid;
+    border-color: #fff;
+    border-width: 1px;
+    box-shadow: 2px 2px 15px 8px rgba(36, 36, 36, 0.15);
+    background: rgba(217, 217, 217, 0.61);
+  }
+
+  .description{
+    font-family:'sans-serif','helvetica';
+    font-size: 23px;
+    text-align: justify;
+    color: #000;
+    padding: 0px 35px 0px 35px;
+  }
+
+  .btn-att{
+    width: 40%;
+    height: 70%;
+    background-color: #C3EFEB;
+    color: #000;
+    font-family:'sans-serif','helvetica';
+    font-size: 30PX;
+  }
+
 }
