--- a/descriptionStyle.css
+++ b/descriptionStyle.css
@@ -65,7 +65,7 @@ body{
     width: 900px;
     height: 100%;
     border-radius: 5px;
-    margin: 150px 0px 0px 0px;
+    margin: 140px 0px 0px 0px;
     padding: 0px 0px 25px 0px;
     border-style: solid;
     border-color: #fff;
@@ -76,7 +76,7 @@ body{
 
   .description{
     font-family:'sans-serif','helvetica';
-    font-size: 23px;
+    font-size: 27px;
     text-align: justify;
     color: #000;
     padding: 0px 35px 0px 35px;
@@ -85,7 +85,7 @@ body{
   .btn-att{
     width: 40%;
     height: 70%;
-    background-color: #C3EFEB;
+    background-color: #fff;
     color: #000;
     font-family:'sans-serif','helvetica';
     font-size: 30PX;
